issue: Titlesonly in second-level subtree
Revise the example document to demonstrate the
trouble I'm having (at least with the RTD theme)
to set titlesonly for a second-level page.

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -9,9 +9,11 @@ subtrees:
 - caption: Example
   entries:
   - file: example/index
-    entries:
-    - file: example/subfolder/page
-    - glob: example/globfolder/*
+    subtrees:
+    - titlesonly: True
+      entries:
+      - file: example/subfolder/page
+      - glob: example/globfolder/*
 - caption: Links
   entries:
   - title: GitHub Repository
